@startuml Lagrange
class Gauss
class Lagrange
class MenuPrincipal
class MenuLagrange
class MenuGauss


MenuPrincipal *-- MenuGauss
MenuPrincipal *-- MenuLagrange

MenuGauss *-- Gauss
MenuLagrange *-- Lagrange

class MenuPrincipal{
    + viewMenuLagrange()
    + viewMenuGauss()  
}
class MenuLagrange{
    + showMenuLagrange()
}
class MenuGauss{
    + showMenuGauss()
}
class Gauss{
    + useFuntionsGauss()
}
class Lagrange{
    + useFuntionsLagrange()
}